deps/v8/test/message/fail/class-accessors-private-undefined-getter-nested.out
# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:9: TypeError: Cannot read private member C from an object whose class did not declare it
  setA(obj, val) { obj.#a = val; }
                       ^
TypeError: Cannot read private member C from an object whose class did not declare it
    at C.setA (*%(basename)s:9:24)
    at new C (*%(basename)s:15:10)
    at *%(basename)s:19:1